--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget2/tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget2/tables-widget2.component.html
@@ -20,7 +20,7 @@
     <table class="table align-middle gs-0 gy-5">
       <!-- begin::Table head -->
       <thead>
-        <tr class="fw-bolder text-muted">
+        <tr class="fw-bolder">
           <th class="p-0 min-w-100px"><b>Product</b></th>
           <th class="p-0 min-w-100px"><b>Tank</b></th>
           <th class="p-0 min-w-100px"><b>Pump</b></th>
