--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
@@ -124,7 +124,7 @@
     <table class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4">
       <!-- begin::Table head -->
       <thead>
-        <tr class="fw-bolder text-muted">
+        <tr class="fw-bolder">
           <th class="min-w-50px">#</th>
           <th class="min-w-150px">First Name</th>
           <th class="min-w-150px">Last Name</th>
