--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
@@ -122,7 +122,7 @@
     <table class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4">
       <!-- begin::Table head -->
       <thead>
-        <tr class="fw-bolder text-muted">
+        <tr class="fw-bolder">
           <th class="min-w-50px">#</th>
           <th class="min-w-100px">Account Type</th>
           <th class="min-w-120px">Account Number</th>
