--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget9/tiles-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget9/tiles-widget9.component.html
@@ -45,7 +45,7 @@
                         <table class="table table-hover table-striped" style="border: 1px solid #272829; ">
                             <thead>
                                 <tr>
-                                    <th style="text-align: left;border: 1px solid #272829; ">
+                                    <th style="text-align: center;border: 1px solid #272829; ">
                                         Product
                                     </th>
                                     <th style="text-align: left;border: 1px solid #272829; ">
@@ -61,7 +61,7 @@
                             </thead>
                             <tbody>
                                 <tr *ngFor="let data of productWiseMeterSales">
-                                    <td style="text-align: left;border: 1px solid #272829;">
+                                    <td style="text-align: center;border: 1px solid #272829;">
                                         {{data.productName}}
                                     </td>
                                     <td style="text-align: left;border: 1px solid #272829;">
