--- a/src/app/pages/builder/builder.component.html
+++ b/src/app/pages/builder/builder.component.html
@@ -1,31 +1,31 @@
 <!-- begin::Row -->
 <div class="row gy-5 gx-xl-8">
   <div class="col-xl-6">
-    <app-tables-widget1 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget1>
+    <app-tables-widget1 class="card card-xxl-stretch mb-5 mb-xl-8" style="border: 1px solid grey;"></app-tables-widget1>
   </div>
   <div *ngIf="accessGroupId != '19'" class="col-xl-6">
-    <app-tables-widget2 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget2>
+    <app-tables-widget2 class="card card-xxl-stretch mb-5 mb-xl-8" style="border: 1px solid grey;"></app-tables-widget2>
   </div>
 </div>
 <!-- end::Row -->
 <!-- begin::Row -->
 <div class="row gy-5 gx-xl-8">
   <div class="col-xl-12">
-    <app-tables-widget3 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget3>
+    <app-tables-widget3 class="card card-xxl-stretch mb-5 mb-xl-8" style="border: 1px solid grey;"></app-tables-widget3>
   </div>
 </div>
 <!-- end::Row -->
 <!-- begin::Row -->
 <div class="row gy-5 gx-xl-8">
   <div class="col-xl-12">
-    <app-tables-widget4 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget4>
+    <app-tables-widget4 class="card card-xxl-stretch mb-5 mb-xl-8" style="border: 1px solid grey;"></app-tables-widget4>
   </div>
 </div>
 <!-- end::Row -->
 <!-- begin::Row -->
 <div class="row gy-5 gx-xl-8">
   <div class="col-xl-12">
-    <app-tables-widget5 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget5>
+    <app-tables-widget5 class="card card-xxl-stretch mb-5 mb-xl-8" style="border: 1px solid grey;"></app-tables-widget5>
   </div>
 </div>
 <!-- end::Row -->
