--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -311,7 +311,7 @@
               </span>
             </td>
 
-            <td style="text-align: center;cursor: pointer;">
+            <td style="text-align: left;cursor: pointer;">
               <button type="button" class="btn btn-primary btn-sm btn-rounded" (click)="openViewBill(viewBill,data.fuelCreditId,data.estimatedRefuelDate,data.mappingPreviousStatus,data.mappingCompanyName,
                       data.companyName,data.hostPhone,data.purpose,data.vehicleNumber,data.manualCrNumber,data.productName,data.productRate,
                       data.transactionStatus,data.productCategory,data.actualCreditQuantity,data.creditAmount)">
@@ -1089,7 +1089,7 @@
 
             </td>
 
-            <td style="text-align: center;cursor: pointer;">
+            <td style="text-align: left;cursor: pointer;">
               <button type="button" class="btn btn-primary btn-sm btn-rounded" (click)="openViewBill(viewBill,data.fuelCreditId,data.estimatedRefuelDate,data.mappingPreviousStatus,data.mappingCompanyName,
                     data.companyName,data.hostPhone,data.purpose,data.vehicleNumber,data.manualCrNumber,data.productName,data.productRate,
                     data.transactionStatus,data.productCategory,data.actualCreditQuantity,data.creditAmount)">
