--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
@@ -154,23 +154,23 @@
                 </span>
               </p>
             </div>
-            <table class="table table-striped">
+            <table class="table table-striped" style="border: 1px solid black;">
               <thead class="">
                 <tr>
-                  <th style="text-align: center;">Sr.No</th>
-                  <th>Date</th>
-                  <th>Bill / Ref No</th>
-                  <th>Vehicle No / other details</th>
-                  <th>Product</th>
-                  <th>Rate</th>
-                  <th>Quantity</th>
-                  <th>Credit Amount</th>
+                  <th style="text-align: center; border: 1px solid black;"><b>Sr.No</b></th>
+                  <th style="border: 1px solid black;"><b>Date</b></th>
+                  <th style="border: 1px solid black;"><b>Bill / Ref No</b></th>
+                  <th style="border: 1px solid black;"><b>Vehicle No / other details</b></th>
+                  <th style="border: 1px solid black;"><b>Product</b></th>
+                  <th style="border: 1px solid black;"><b>Rate</b></th>
+                  <th style="border: 1px solid black;"><b>Quantity</b></th>
+                  <th style="border: 1px solid black;"><b>Credit Amount</b></th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let data of statementPurData; let i = index">
-                  <td> {{i+1}} </td>
-                  <td>
+                  <td style="text-align: center; border: 1px solid black;"> {{i+1}} </td>
+                  <td style="border: 1px solid black;">
                     <span *ngIf="(data.estimatedRefuelDate | date:'d MMM y') == '1 Jan 2021' ">
                       1 Jan 2022
                     </span>
@@ -179,7 +179,7 @@
                     </span>
                   </td>
 
-                  <td>
+                  <td style="border: 1px solid black;">
                     <span *ngIf="data.manualCrNumber == ''">
                     </span>
                     <span *ngIf="data.manualCrNumber != ''">
@@ -190,7 +190,7 @@
                       </span>
                     </span>
                   </td>
-                  <td>
+                  <td style="border: 1px solid black;">
                     <span *ngIf="data.purpose == 'CREDIT'">
                       <span *ngIf="data.vehicleNumber == 'undefined'">
                       </span>
@@ -210,7 +210,7 @@
                       {{data.advName}} {{data.advMobile}}
                     </span>
                   </td>
-                  <td>
+                  <td style="border: 1px solid black;">
                     <span *ngIf="data.purpose == 'LUBE' ">
                       {{data.productName}} {{data.lubeName}}
                     </span>
@@ -221,8 +221,8 @@
                       ADVANCE
                     </span>
                   </td>
-                  <td> {{data.productRate}} </td>
-                  <td>
+                  <td style="border: 1px solid black;"> {{data.productRate}} </td>
+                  <td style="border: 1px solid black;">
                     <span *ngIf="data.purpose == 'CREDIT' ">
                       <span *ngIf='data.productCategory == "CNG" '>
                         {{data.actualCreditQuantity | number:'1.2-2'}} Kg
@@ -236,7 +236,7 @@
                     </span>
                   </td>
 
-                  <td>
+                  <td style="border: 1px solid black;">
                     {{data.creditAmount | number:'1.2-2'}}
                   </td>
 
