changes added by tejaswini

--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -193,11 +193,11 @@
     </a>
   </div>
 
-  <!-- <div class="menu-item px-5">
-    <a routerLink="/credit/subscription" class="menu-link px-5">
-      Subscription
+  <div class="menu-item px-5">
+    <a routerLink="/customerDetails/settings" class="menu-link px-5">
+      Settings
     </a>
-  </div> -->
+  </div>
 
   <div
     class="menu-item px-5"
