changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -126,7 +126,7 @@
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title">Book/Ledger
+              <span class="menu-title">Cr.Book/Ledger
               </span>
             </span>
           </div>
@@ -135,7 +135,7 @@
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title" (click)="alert()">Book/Ledger
+              <span class="menu-title" (click)="alert()">Cr.Book/Ledger
               </span>
             </span>
           </div>
@@ -285,7 +285,7 @@
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
-            <span class="menu-title">Book/Ledger
+            <span class="menu-title">Shift Book/Ledger
             </span>
             <span class="menu-arrow"></span>
           </span>
@@ -594,7 +594,7 @@
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title">Book/Ledger
+              <span class="menu-title">Acc.Book/Ledger
               </span>
             </span>
           </div>
@@ -603,7 +603,7 @@
               <span class="menu-bullet">
                 <span class="bullet bullet-dot"></span>
               </span>
-              <span class="menu-title" (click)="alert()">Book/Ledger
+              <span class="menu-title" (click)="alert()">Acc.Book/Ledger
               </span>
             </span>
           </div>
@@ -1160,7 +1160,7 @@
             </span>
           </div>
         </div>
-        <div *ngIf="isViswasaTxExcel" class="menu-item menu-accordion">
+        <!-- <div *ngIf="isViswasaTxExcel" class="menu-item menu-accordion">
           <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
             routerLink="/report/viswasaTxEcel">
             <span class="menu-link">
@@ -1180,7 +1180,7 @@
               </span>
             </span>
           </div>
-        </div>
+        </div> -->
         <div *ngIf="isSalesPurReport" class="menu-item menu-accordion">
           <div *ngIf="accessGroupId != '19'" routerLinkActive="here show" data-kt-menu-trigger="click"
             routerLink="/report/salesPurchaseReport">
