--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -406,7 +406,7 @@
                           <h6>
                             "Dear Customer, You added this Credit entry to Shift Or Saved Invoice, if you delete or edit
                             this entry it will
-                            affect the shift tally Or Saved Invoice. Are you sure to delete ? "
+                            affect the shift tally Or Saved Invoice."
                           </h6>
                         </label>
                       </h4>
@@ -416,7 +416,7 @@
                     </div>
                     <div class="modal-body">
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                       <div class="col-md-4">
                       </div>
                       <div class="col-auto">
@@ -428,7 +428,7 @@
                           (click)="d('Cross click')">No</button>
                       </div>
                       <br>
-                    </div>
+                    </div> -->
                   </ng-template>
 
                   <ng-template #editTemplate let-c="close" let-d="dismiss">
@@ -438,7 +438,7 @@
                           <h6>
                             Dear Customer, You added this Credit entry to Shift Or Saved Invoice, if you delete or edit
                             this entry it will
-                            affect the shift tally Or Saved Invoice. Are you sure to delete ?
+                            affect the shift tally Or Saved Invoice.
                           </h6>
                         </label>
                       </h4>
@@ -448,7 +448,7 @@
                     </div>
                     <div class="modal-body">
                     </div>
-                    <div class="row">
+                    <!-- <div class="row">
                       <div class="col-md-4">
 
                       </div>
@@ -461,7 +461,7 @@
                           (click)="d('Cross click')">No</button>
                       </div>
                       <br>
-                    </div>
+                    </div> -->
                   </ng-template>
 
                 </div>
@@ -1423,7 +1423,7 @@
                     <h6>
                       "Dear Customer, You added this Credit entry to Shift Or Saved Invoice, if you delete or edit this
                       entry it will
-                      affect the shift tally Or Saved Invoice. Are you sure to delete ? "
+                      affect the shift tally Or Saved Invoice."
                     </h6>
                   </label>
                 </h4>
@@ -1433,7 +1433,7 @@
               </div>
               <div class="modal-body">
               </div>
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-4">
                 </div>
                 <div class="col-auto">
@@ -1444,7 +1444,7 @@
                   <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">No</button>
                 </div>
                 <br>
-              </div>
+              </div> -->
             </ng-template>
 
             <ng-template #editTemplate let-c="close" let-d="dismiss">
@@ -1454,7 +1454,7 @@
                     <h6>
                       Dear Customer, You added this Credit entry to Shift Or Saved Invoice, if you delete or edit this
                       entry it will
-                      affect the shift tally Or Saved Invoice. Are you sure to delete ?
+                      affect the shift tally Or Saved Invoice. 
                     </h6>
                   </label>
                 </h4>
@@ -1464,7 +1464,7 @@
               </div>
               <div class="modal-body">
               </div>
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-md-4">
                 </div>
                 <div class="col-auto">
@@ -1475,7 +1475,7 @@
                   <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">No</button>
                 </div>
                 <br>
-              </div>
+              </div> -->
             </ng-template>
           </tr>
 
