--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget13/lists-widget13.component.html
@@ -33,6 +33,11 @@
             </div>
             <br>
           </div>
+
+          <div class="col-md-1" style="margin-left: auto;">
+            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" (click)="exportPDF()"><i
+                    class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
+        </div>
         </form>
         <div class="table-responsive mb-0">
           <table class="table table-centered table-nowrap">
