--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
@@ -1,6 +1,167 @@
+<style>
+  .switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+  }
+
+  .switch input {
+    display: none;
+  }
+
+  .slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+  }
+
+  .slider:before {
+    background-color: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+  }
+
+  input:checked+.slider {
+    background-color: #66bb6a;
+  }
+
+  input:checked+.slider:before {
+    transform: translateX(26px);
+  }
+
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+</style>
+
+
 <div class="card-body d-flex flex-column pb-10 pb-lg-15">
   <div class="flex-grow-1">
     <form [formGroup]="searchDiscountForm">
+      <div class="row">
+        <div class="col-md-9"></div>
+        <div class="col-md-3">
+          <button class="btn btn-success my-2 my-sm-0 btn-sm" (click)="openSelectMobile(selectMobile)"
+            title="click on  [+] to mention pump's contact number on statement">
+            +
+          </button>
+        </div>
+
+
+        <ng-template #selectMobile let-c="close" let-d="dismiss">
+          <div class="modal-header">
+            <h4 class="text-center">
+              Select Mobile
+            </h4>
+            <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="unitForm">
+              <div class="row">
+                <!-- <div class="col-md-1"></div> -->
+                <div class="col-md-3">
+                  <b>Select</b>
+                </div>
+                <div class="col-md-9">
+                  <select class="form-control" formControlName="mobile" required>
+                    <option value="">Select </option>
+                    <option *ngFor="let data of managerList" [value]="data.phone1">
+                      {{data.firstName}} {{data.lastName}} / {{data.phone1}}
+                    </option>
+                  </select>
+                </div>
+              </div>
+
+              <br>
+              <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-3">
+                  <button class="btn btn-success my-2 my-sm-0" type="button" (click)="submitMobile()">Select</button>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3">
+                  <button class="btn btn-danger" type="button" (click)="d('Cross click')">Cancel</button>
+                </div>
+              </div>
+            </form>
+            <br>
+            <div class="row">
+              <div class="col-md-1"></div>
+              <div class="col-auto">
+                <b>Selected : {{managerMobile}} </b>
+              </div>
+
+            </div>
+
+            <br>
+            <hr *ngIf="accessGroup != '7' && accessGroup != '31' && accessGroup != '51'">
+            <div *ngIf="accessGroup != '7' && accessGroup != '31' && accessGroup != '51' ">
+              <div class="row">
+                <div class="col-auto" style="margin-top: 7px">
+                  Manual Number Status
+                </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="col-auto">
+                  <span *ngIf="manualNumberStatus == 'TRUE'">
+                    <label class="switch">
+                      <input type="checkbox" checked="checked" (change)="updatemanualNumberStatus($event,'TRUE')">
+                      <span class="slider round"></span>
+                    </label>
+                  </span>
+                  <span *ngIf="manualNumberStatus != 'TRUE'">
+                    <label class="switch">
+                      <input type="checkbox" (change)="updatemanualNumberStatus($event,'FALSE')">
+                      <span class="slider round"></span>
+                    </label>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <hr *ngIf="accessGroup != '7' && accessGroup != '31' && accessGroup != '51'">
+            <div *ngIf="accessGroup != '7' && accessGroup != '31' && accessGroup != '51'">
+              <div class="row">
+                <div class="col-auto" style="margin-top: 7px">
+                  Manual Number Automation
+                </div>
+                <div class="col-auto">
+                  <span *ngIf="autoManualStatus == 'TRUE'">
+                    <label class="switch">
+                      <input type="checkbox" checked="checked" (change)="updatAutoNumberStatus($event,'TRUE')">
+                      <span class="slider round"></span>
+                    </label>
+                  </span>
+                  <span *ngIf="autoManualStatus != 'TRUE'">
+                    <label class="switch">
+                      <input type="checkbox" (change)="updatAutoNumberStatus($event,'FALSE')">
+                      <span class="slider round"></span>
+                    </label>
+                  </span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </ng-template>
+
+      </div>
+
+      <br>
       <div class="row">
         <label for="example-text-input" class="col-auto col-form-label">Customer Select </label>
         <div class="col-lg-3">
