--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget11/trans-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget11/trans-tables-widget11.component.html
@@ -88,7 +88,7 @@
                             </div>
                             <br>
                             <table *ngIf="isVisible" class="table table-hover b" style="border: 1px solid black;">
-                                <thead>
+                                <thead style="background-color: lightblue;">
                                     <tr>
                                         <th style="text-align: center;font-size: 18px; border: 1px solid black;">Types</th>
                                         <th style="text-align: center;font-size: 18px; border: 1px solid black;">Status</th>
